/***********************************************************************
X3 ChangeLog

2007-04-22  Alex Schumann  <rubin@afternet.org>

        * src/nickserv.c: change authserv search accountmask to just account.
	added inldap search criteria. added add2ldap search target.

	* src/nickserv.help: added help for ldap searching.

	* src/x3ldap.c: clean up of some error messages/handling. + add a byte
	to password malloc to maybe solve a core problem?

2007-04-21  Alex Schumann  <rubin@afternet.org>
        * src/nickserv.c: remove some un-needed errors with duplicate
	add/deletes in ldap 

2007-04-21  Alex Schumann  <rubin@afternet.org>

        * src/nickserv.c: fix bug with register_user from loc causing core

2007-04-20  Alex Schumann  <rubin@afternet.org>

        * src/x3ldap.c: support for ldaps (ssl/tls) was added. ldap_host and
	ldap_port changed to ldap_uri.

	* src/nickserv.c: fixed LOC bugs with accounts that exist in ldap but
	not x3 not being created.  changed to ldap_uri config instead of
	host/port

	* src/nickserv.h: changed to ldap_uri

	* x3.conf.example: changed to ldap_uri

2007-04-09  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* README: testing.

2007-04-09  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* INSTALL: Another test.

2007-04-08  Alex Schumann  <rubin@afternet.org>

        * src/chanserv.c: fix for a core when adding kill alert for numchans 1

2007-04-06  Alex Schumann  <rubin@afternet.org>

        * src/chanserv.help: added Jigsy's mode help MODE CHANNEL and MODE
	USER

2007-04-07  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* ChangeLog: Email update.

2007-04-07  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* src/AUTHORS: Email update, mostly for CIA commit testing.

2007-04-07  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* src/helpfile.c: Added colour support $k.

2007-03-20  Alex Schumann  <rubin@afternet.org>

        * src/nickserv.c: ButtaS2sLore sent in this patch to fix the default
	style when registering new users.
